# sell

./: .gitignore  2025-09-10_yx1h.csv  CMakeLists.txt  CODE_REVIEW_REPORT.md  agent.md  config.json  itpdk.ini  main.cpp  prepare_linux_libs.ps1
design/trade/: 施工设计稿.md
docs/: README.md
docs/adr/: ADR-0001.md  README.md
docs/incidents/: INC-20260103-01.md  INC-20260103-02.md  INC-20260105-01.md  INC-20260106-01.md  INC-20260107-01.md  INC-20260107-02.md  INC-20260119-01.md  README.md
docs/index/: code.json  docs.json  fields.json  logs.json  pipelines.json  root.json
docs/modules/: README.md  auction.md  base_cancel.md  close.md  intraday.md
docs/runbook/: README.md  rag.md
docs/worklog/: 2026-01-05.md  2026-01-06.md  2026-02-03.md  README.md
examples/: usage_example.cpp
include/: CompositeAdapter.h  Config.h  ImprovedLogger.h  SecTradingApi.h  sell_strategy_api.h  sell_strategy_c_api.h
include_external/linux/secitpdk/: secitpdk.h  secitpdk_struct.h
include_external/windows/itpdk/: itpdk_dict.h
result/: 2025-09-10_yx1h.csv  CMakeLists.txt  CODE_REVIEW_REPORT.md  config.json  itpdk.ini  prepare_linux_libs.ps1
result/examples/: usage_example.cpp
result/include/: CompositeAdapter.h  Config.h  ImprovedLogger.h  SecTradingApi.h  sell_strategy_api.h  sell_strategy_c_api.h
result/include_external/linux/: HHTradeDataSetDefine.h
result/include_external/windows/: TDFAPIInner.h  TDFAPIStruct.h  TDFDataDefine.h  TDNonMarketStruct.h
result/lib/windows/: fixapi50.lib  fixapitool.lib  secitpdk.lib
result/src/adapters/: SecTradingApi.cpp  SecTradingApi.cpp.backup  TdfMarketDataApi.cpp  TdfMarketDataApi.h  数据接口文档.md
result/src/core/: Config.cpp  ConfigReader.h  CsvConfig.cpp  CsvConfig.h  IMarketDataApi.h  ITradingApi.h  MarketData.h  Order.h  SellStrategy.cpp  SellStrategy.h  TradingManager.cpp  TradingMarketApi.h  rng.h  util.cpp  util.h
result/src/strategies/: AuctionSellStrategy.cpp  AuctionSellStrategy.h  CloseSellStrategy.cpp  CloseSellStrategy.h  IntradaySellStrategy.cpp  IntradaySellStrategy.h
src/adapters/: SecTradingApi.cpp  SecTradingApi.cpp.backup  TdfMarketDataApi.cpp  TdfMarketDataApi.h  数据接口文档.md
src/core/: AppContext.h  Config.cpp  ConfigReader.h  CsvConfig.cpp  CsvConfig.h  IMarketDataApi.h  ITradingApi.h  MarketData.h  Order.h  QueuedTradingApi.cpp  QueuedTradingApi.h  SellStrategy.cpp  SellStrategy.h  TeeStream.h  TradingManager.cpp  TradingMarketApi.h  rng.h  util.cpp  util.h
src/modules/: BaseCancelModule.cpp  BaseCancelModule.h  IModule.h  Qh2hSellModule.cpp  Qh2hSellModule.h  UsageExampleModule.cpp  UsageExampleModule.h
src/strategies/: AuctionSellStrategy.cpp  AuctionSellStrategy.h  CloseSellStrategy.cpp  CloseSellStrategy.h  IntradaySellStrategy.cpp  IntradaySellStrategy.h
